--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "csstext",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/parse.js",
   "directories": {
     "test": "test"
   },
